--- a/app/src/main/res/layout/activity_legal_libraries.xml
+++ b/app/src/main/res/layout/activity_legal_libraries.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/legal_libraries_use"
+            android:text="@string/libs_in_use"
             android:textSize="18sp"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/legal_library_audiokit"
+            android:text="@string/audiokit"
             android:textSize="18sp"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
