--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:contentDescription="@string/prev_page_button"
+        android:contentDescription="@string/prev_page"
         android:scaleType="fitCenter"
         android:tint="@color/colorAccent"
         android:background="@android:color/transparent"
@@ -37,7 +37,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:scaleType="fitCenter"
-        android:contentDescription="@string/next_page_button"
+        android:contentDescription="@string/next_page"
         android:background="@android:color/transparent"
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/ic_chevron_right" />
@@ -52,8 +52,8 @@
         android:fontFamily="sans-serif-condensed"
         android:textColor="@color/colorAccent"
         android:gravity="top|center_horizontal"
-        android:contentDescription="@string/walkthrough_skip_button"
-        android:text="@string/walkthrough_skip_button"
+        android:contentDescription="@string/skip"
+        android:text="@string/skip"
         android:textAllCaps="false"
         android:layout_alignStart="@+id/next_button" />
 
