--- a/app/src/main/res/layout/layout_walkthrough_five.xml
+++ b/app/src/main/res/layout/layout_walkthrough_five.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/text_color_primary"
         android:textSize="21sp"
         android:text="@string/walkthrough_location_page"
-        android:contentDescription="@string/walkthrough_title_access"
+        android:contentDescription="@string/walkthrough_title_location"
         android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/walkthrough_location_permission"
+        android:text="@string/walkthrough_permission"
         android:gravity="center"
         android:fontFamily="sans-serif"
         android:textSize="16sp"
@@ -79,8 +79,8 @@
         android:layout_marginTop="4dp"
         android:padding="16dp"
         android:textColor="@color/colorAccent"
-        android:text="@string/walkthrough_ask_later"
-        android:contentDescription="@string/walkthrough_ask_later"
+        android:text="@string/not_now"
+        android:contentDescription="@string/not_now"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@+id/button_location" />
