--- a/app/src/main/res/layout/layout_walkthrough_one.xml
+++ b/app/src/main/res/layout/layout_walkthrough_one.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/walkthrough_welcome"
+                android:text="@string/welcome"
                 android:fontFamily="sans-serif-medium"
                 android:textColor="@color/text_color_primary"
                 android:textSize="21sp"
