--- a/app/src/main/res/layout/layout_walkthrough_three.xml
+++ b/app/src/main/res/layout/layout_walkthrough_three.xml
@@ -59,7 +59,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/title_eclipse_center"
+                android:text="@string/eclipse_center"
                 android:textSize="21sp"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
                 android:fontFamily="sans-serif"
-                android:text="@string/walkthrough_welcome_text"
+                android:text="@string/walkthrough_eclipse_center"
                 android:textSize="16sp"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
