--- a/app/src/main/res/xml/pref_legal.xml
+++ b/app/src/main/res/xml/pref_legal.xml
@@ -7,7 +7,7 @@
 
     <Preference
         android:key="libraries_display"
-        android:title="@string/pref_title_libraries" />
+        android:title="@string/open_src_libs" />
 
     <Preference
         android:key="credits_display"
