--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="material_drawer_dark_header_selection_text">#FFF</color>
 
 
+    <color name="section_bg">#E0E0E0</color>
     <color name="md_divider_light_12">#1fffffff</color>
     <color name="divider_color">#E0E0E0</color>
 
@@ -35,5 +36,4 @@
     <color name="ma_text_dark_secondary_54">#8a000000</color>
     <color name="text_color_primary">@color/ma_text_dark_primary_87</color>
     <color name="text_color_secondary">@color/ma_text_dark_secondary_54</color>
-
 </resources>
