adds menu option for selecting supported languages

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,4 +29,10 @@
         <item>@drawable/kelsey_perrett</item>
     </array>
 
+    <!-- locale order must match that of the supported languages array -->
+    <array name="supported_languages_locale">
+        <item>en</item>
+        <item>es</item>
+    </array>
+
 </resources>
