--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="default_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
@@ -15,6 +16,5 @@
     <dimen name="ma_divider_thickness_light">0.5dp</dimen>
 
     <dimen name="permission_dialog_width">300dp</dimen>
-
 
 </resources>
