--- a/app/src/main/res/layout/activity_legal_license.xml
+++ b/app/src/main/res/layout/activity_legal_license.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -43,6 +43,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
