--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -23,15 +23,12 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:importantForAccessibility="no"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/guideline" />
-
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -47,15 +44,21 @@
 
             <TextView
                 android:id="@+id/bottom_view_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"
+                android:maxLines="1"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/rumble_map_how"
                 android:textSize="21sp"
                 android:textColor="@color/text_color_primary"
-                android:focusable="false"/>
+                android:focusable="false"
+                app:autoSizeTextType="uniform"
+                app:autoSizeMinTextSize="16sp"
+                app:autoSizeStepGranularity="1sp"/>
 
             <TextView
                 android:id="@+id/bottom_view_more"
