--- a/app/src/main/res/layout/fragment_eclipse_center.xml
+++ b/app/src/main/res/layout/fragment_eclipse_center.xml
@@ -42,7 +42,6 @@
                 android:orientation="vertical"
                 android:gravity="center">
 
-
                 <ImageView
                     android:id="@+id/banner"
                     android:layout_width="match_parent"
@@ -50,7 +49,6 @@
                     android:src="@drawable/eclipse_banner_2"
                     android:scaleType="centerCrop"
                     android:adjustViewBounds="true"/>
-
 
                 <include
                     android:id="@+id/eclipse_countdown"
@@ -67,13 +65,14 @@
                         android:id="@+id/eclipse_type_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/eclipse_type"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
 
                     <TextView
@@ -81,12 +80,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:gravity="end"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
                 </LinearLayout>
 
@@ -98,28 +98,30 @@
 
                     <TextView
                         android:id="@+id/date_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/date"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
 
                     <TextView
                         android:id="@+id/date"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:gravity="end"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
 
                 </LinearLayout>
@@ -131,32 +133,32 @@
                     android:weightSum="2">
                     <TextView
                         android:id="@+id/latitude_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/location_latitude"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
-
 
                     <TextView
                         android:id="@+id/latitude"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:gravity="end"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:focusable="true"
@@ -166,28 +168,30 @@
 
                     <TextView
                         android:id="@+id/longitude_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/location_longitude"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1" />
 
                     <TextView
                         android:id="@+id/longitude"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:gravity="end"
+                        android:maxLines="2"
                         android:layout_weight="1" />
                 </LinearLayout>
 
@@ -197,31 +201,32 @@
                     android:layout_height="wrap_content"
                     android:weightSum="2">
 
-
                     <TextView
                         android:id="@+id/percent_eclipse_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/percent_eclipse"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
 
                     <TextView
                         android:id="@+id/percent_eclipse"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:layout_weight="1"
+                        android:maxLines="2"
                         android:gravity="end"/>
                 </LinearLayout>
 
@@ -235,29 +240,31 @@
 
                     <TextView
                         android:id="@+id/duration_totality_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/percent_eclipse"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
+                        android:maxLines="2"
                         android:layout_weight="1"/>
 
                     <TextView
                         android:id="@+id/duration_totality"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:layout_weight="1"
-                        android:gravity="end"/>
+                        android:gravity="end"
+                        android:maxLines="2" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -265,6 +272,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
                     android:background="@color/colorAccent"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -335,14 +345,12 @@
                         android:layout_height="wrap_content"
                         android:visibility="gone"/>
 
-
                     <include
                         android:id="@+id/stub_contact_three"
                         layout="@layout/layout_eclipse_event_row"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:visibility="gone"/>
-
 
                     <include
                         android:id="@+id/stub_contact_four"
