--- a/app/src/main/res/layout/layout_countdown.xml
+++ b/app/src/main/res/layout/layout_countdown.xml
@@ -17,7 +17,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/eclipse_countdown_title"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="@dimen/title_text_size" />
 
     <TextView
         android:id="@+id/countdown_days"
@@ -28,10 +28,9 @@
         android:contentDescription="@string/days"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/default_text_size"
         android:textAllCaps="true"
         android:text="@string/days"/>
-
 
     <TextView
         android:id="@+id/days_primary"
@@ -41,7 +40,7 @@
         android:background="@drawable/round_countdown"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0" />
 
@@ -55,10 +54,9 @@
         android:layout_marginStart="4dp"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0"/>
-
 
     <TextView
         android:id="@+id/countdown_hours"
@@ -71,11 +69,9 @@
         android:layout_marginStart="16dp"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/default_text_size"
         android:textAllCaps="true"
         android:text="@string/hours"/>
-
-
 
     <TextView
         android:id="@+id/hours_primary"
@@ -86,10 +82,9 @@
         android:layout_below="@+id/countdown_hours"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0" />
-
 
     <TextView
         android:id="@+id/hours_secondary"
@@ -101,11 +96,9 @@
         android:layout_marginStart="4dp"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0"/>
-
-
 
     <TextView
         android:id="@+id/countdown_minutes"
@@ -118,11 +111,9 @@
         android:layout_marginStart="16dp"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/default_text_size"
         android:textAllCaps="true"
         android:text="@string/min_abbr"/>
-
-
 
     <TextView
         android:id="@+id/minutes_primary"
@@ -133,10 +124,9 @@
         android:layout_below="@+id/countdown_minutes"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0" />
-
 
     <TextView
         android:id="@+id/minutes_secondary"
@@ -148,7 +138,7 @@
         android:layout_marginStart="4dp"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0"/>
 
@@ -163,10 +153,9 @@
         android:layout_marginStart="16dp"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/default_text_size"
         android:textAllCaps="true"
         android:text="@string/sec_abbr"/>
-
 
     <TextView
         android:id="@+id/seconds_primary"
@@ -177,10 +166,9 @@
         android:layout_below="@+id/countdown_seconds"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0" />
-
 
     <TextView
         android:id="@+id/seconds_secondary"
@@ -192,7 +180,7 @@
         android:layout_marginStart="4dp"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:text="0"/>
 </RelativeLayout>
