--- a/app/src/main/res/layout/activity_legal_libraries.xml
+++ b/app/src/main/res/layout/activity_legal_libraries.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="@string/libs_in_use"
-            android:textSize="18sp"
+            android:textSize="@dimen/title_text_size"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:text="@string/libraries_use_detail"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="@string/jsyn_lib"
-            android:textSize="18sp"
+            android:textSize="@dimen/title_text_size"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:layout_margin="16dp"/>
 
