--- a/app/src/main/res/layout/activity_legal_license.xml
+++ b/app/src/main/res/layout/activity_legal_license.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="@string/app_name"
-            android:textSize="18sp"
+            android:textSize="@dimen/title_text_size"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
@@ -34,7 +34,8 @@
             <WebView
                 android:id="@+id/license_details"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/default_text_size" />
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
