--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -132,7 +132,7 @@
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
                 android:textColor="@color/text_color_primary"
-                android:textSize="21sp" />
+                android:textSize="@dimen/title_text_size" />
 
             <View
                 android:id="@+id/divider"
@@ -148,7 +148,7 @@
                 android:focusable="true"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/text_color_primary"
-                android:textSize="18sp"
+                android:textSize="@dimen/default_text_size"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
