--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -54,7 +54,7 @@
                 android:maxLines="1"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/rumble_map_how"
-                android:textSize="21sp"
+                android:textSize="@dimen/title_text_size"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"
                 app:autoSizeTextType="uniform"
@@ -72,7 +72,7 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif"
                 android:text="@string/rumble_map_instructions"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
         </LinearLayout>
