--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -10,7 +10,7 @@
         android:id="@+id/language"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@color/text_color_primary"
         android:fontFamily="sans-serif"
         android:checkMark="@drawable/ic_check_white"
