--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -37,6 +37,6 @@
         android:layout_toStartOf="@+id/list_media_extra"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/text_color_primary"
-        android:textSize="18sp"/>
+        android:textSize="@dimen/default_text_size"/>
 
 </RelativeLayout>
