--- a/app/src/main/res/layout/item_partner.xml
+++ b/app/src/main/res/layout/item_partner.xml
@@ -42,7 +42,7 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="sans-serif-medium"
                     android:textColor="@color/text_color_primary"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/title_text_size"
                     tools:text="NASA"/>
 
                 <TextView
@@ -52,7 +52,7 @@
                     android:layout_marginTop="4dp"
                     android:fontFamily="sans-serif"
                     android:textColor="@color/text_color_secondary"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/default_text_size"
                     tools:text="Extra details"/>
 
             </LinearLayout>
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:fontFamily="sans-serif"
-            android:textSize="16sp"
+            android:textSize="@dimen/default_text_size"
             android:textColor="@color/text_color_primary"
             tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum nibh convallis, volutpat lorem non, mattis lacus. Pellentesque nec lorem risus. Phasellus vitae est mattis neque ornare malesuada a ut magna. Sed nec laoreet est. Maecenas sagittis, nisi nec maximus gravida, lectus magna tempus ex, ac pharetra neque leo id velit."/>
 
