--- a/app/src/main/res/layout/layout_eclipse_event_row.xml
+++ b/app/src/main/res/layout/layout_eclipse_event_row.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:gravity="center_horizontal"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="18sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="18sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
@@ -47,7 +47,7 @@
         android:layout_marginEnd="16dp"
         android:gravity="center_horizontal"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="18sp"
+        android:textSize="@dimen/default_text_size"
         android:textColor="@android:color/white"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
