--- a/app/src/main/res/layout/layout_walkthrough_five.xml
+++ b/app/src/main/res/layout/layout_walkthrough_five.xml
@@ -49,7 +49,7 @@
             android:text="@string/walkthrough_permission"
             android:gravity="center"
             android:fontFamily="sans-serif"
-            android:textSize="16sp"
+            android:textSize="@dimen/default_text_size"
             android:textColor="@color/text_color_primary"
             android:layout_marginTop="16dp"
             android:layout_marginStart="24dp"
