--- a/app/src/main/res/layout/layout_walkthrough_four.xml
+++ b/app/src/main/res/layout/layout_walkthrough_four.xml
@@ -74,7 +74,7 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_audio_description"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
 
