--- a/app/src/main/res/layout/layout_walkthrough_one.xml
+++ b/app/src/main/res/layout/layout_walkthrough_one.xml
@@ -74,7 +74,7 @@
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_welcome_text"
                 android:textColor="@color/text_color_primary"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:focusable="false"/>
         </LinearLayout>
     </ScrollView>
