--- a/app/src/main/res/layout/layout_walkthrough_three.xml
+++ b/app/src/main/res/layout/layout_walkthrough_three.xml
@@ -75,7 +75,7 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_eclipse_center"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
         </LinearLayout>
