--- a/app/src/main/res/layout/layout_walkthrough_two.xml
+++ b/app/src/main/res/layout/layout_walkthrough_two.xml
@@ -78,7 +78,7 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_rumble_map_text"
-                android:textSize="16sp"
+                android:textSize="@dimen/default_text_size"
                 android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
         </LinearLayout>
