--- a/app/src/main/res/layout/layout_walkthrough_four.xml
+++ b/app/src/main/res/layout/layout_walkthrough_four.xml
@@ -15,16 +15,25 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
 
-    <ImageView
-        android:id="@+id/walkthrough_img"
+    <LinearLayout
+        android:id="@+id/image_header"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/soundscapes_audiorecordings"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
         android:importantForAccessibility="no"
+        android:gravity="center|bottom"
+        android:background="@drawable/walkthrough_gradient"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline" />
+        app:layout_constraintBottom_toBottomOf="@+id/guideline" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:src="@drawable/media_framed"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/current_page"
@@ -35,7 +44,7 @@
         android:textSize="12sp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/walkthrough_img"
+        app:layout_constraintBottom_toBottomOf="@+id/image_header"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ScrollView
