Shows eclipse center lockout for upcoming data

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="live_experience_enabled">false</bool>
+    <bool name="lockout_eclipse_center">true</bool>
 </resources>
