--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <array name="default_features_title">
+        <item>@string/bailys_beads</item>
+        <item>@string/bailys_beads_closeup</item>
+        <item>@string/corona</item>
+        <item>@string/diamond_ring</item>
+        <item>@string/helmet_streamers</item>
+        <item>@string/helmet_streamers_closeup</item>
+        <item>@string/prominence</item>
+        <item>@string/prominence_closeup</item>
+    </array>
+
+    <array name="first_contact_features_title">
+        <item>@string/first_contact</item>
+        <item>@string/bailys_beads</item>
+        <item>@string/bailys_beads_closeup</item>
+        <item>@string/corona</item>
+        <item>@string/diamond_ring</item>
+        <item>@string/helmet_streamers</item>
+        <item>@string/helmet_streamers_closeup</item>
+        <item>@string/prominence</item>
+        <item>@string/prominence_closeup</item>
+    </array>
+
+    <array name="totality_features_title">
+        <item>@string/first_contact</item>
+        <item>@string/bailys_beads</item>
+        <item>@string/bailys_beads_closeup</item>
+        <item>@string/corona</item>
+        <item>@string/diamond_ring</item>
+        <item>@string/helmet_streamers</item>
+        <item>@string/helmet_streamers_closeup</item>
+        <item>@string/prominence</item>
+        <item>@string/prominence_closeup</item>
+        <item>@string/totality</item>
+    </array>
+
+    <array name="default_features_description">
+        <item>@string/bailys_beads_description</item>
+        <item>@string/bailys_beads_description</item>
+        <item>@string/corona_description</item>
+        <item>@string/diamond_ring_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/prominence_description</item>
+        <item>@string/prominence_description</item>
+    </array>
+
+    <array name="first_contact_features_description">
+        <item>@string/first_contact_description</item>
+        <item>@string/bailys_beads_description</item>
+        <item>@string/bailys_beads_description</item>
+        <item>@string/corona_description</item>
+        <item>@string/diamond_ring_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/prominence_description</item>
+        <item>@string/prominence_description</item>
+    </array>
+
+    <array name="totality_features_description">
+        <item>@string/first_contact_description</item>
+        <item>@string/bailys_beads_description</item>
+        <item>@string/bailys_beads_description</item>
+        <item>@string/corona_description</item>
+        <item>@string/diamond_ring_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/helmet_streamers_description</item>
+        <item>@string/prominence_description</item>
+        <item>@string/prominence_description</item>
+        <item>@string/totality_description</item>
+    </array>
+
+    <array name="default_features_image">
+        <item>@drawable/eclipse_bailys_beads</item>
+        <item>@drawable/bailys_beads_close_up</item>
+        <item>@drawable/eclipse_corona</item>
+        <item>@drawable/eclipse_diamond_ring</item>
+        <item>@drawable/helmet_streamers</item>
+        <item>@drawable/helmet_streamer_closeup</item>
+        <item>@drawable/eclipse_prominence</item>
+        <item>@drawable/prominence_closeup</item>
+    </array>
+
+    <array name="first_contact_features_image">
+        <item>@drawable/eclipse_first_contact</item>
+        <item>@drawable/eclipse_bailys_beads</item>
+        <item>@drawable/bailys_beads_close_up</item>
+        <item>@drawable/eclipse_corona</item>
+        <item>@drawable/eclipse_diamond_ring</item>
+        <item>@drawable/helmet_streamers</item>
+        <item>@drawable/helmet_streamer_closeup</item>
+        <item>@drawable/eclipse_prominence</item>
+        <item>@drawable/prominence_closeup</item>
+    </array>
+
+    <array name="totality_features_image">
+        <item>@drawable/eclipse_first_contact</item>
+        <item>@drawable/eclipse_bailys_beads</item>
+        <item>@drawable/bailys_beads_close_up</item>
+        <item>@drawable/eclipse_corona</item>
+        <item>@drawable/eclipse_diamond_ring</item>
+        <item>@drawable/helmet_streamers</item>
+        <item>@drawable/helmet_streamer_closeup</item>
+        <item>@drawable/eclipse_prominence</item>
+        <item>@drawable/prominence_closeup</item>
+        <item>@drawable/eclipse_totality</item>
+    </array>
 
     <array name="current_partners_logo">
         <item>@drawable/nasa</item>
